--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "async": "~0.2.8",
     "express": "~3.2.4",
     "socket.io": "~0.9.14",
-    "request"    : "latest",
-    "cheerio"    : "latest"
+    "request": "latest",
+    "cheerio": "latest"
+  },
+  "devDependencies": {
+    "connect-livereload": "^0.5.3",
+    "tiny-lr": "^0.1.5"
   }
 }
